# cheddar-logic

./: .copilot-debug-f5.js  .env.example  .env.production  .env.production.example  .env.vercel  .eslintignore  .gitignore  .gitmodules  .prettierignore  .tmp_check_projections.py  AGENTS.md  AUTOMATED_SETUP.md  BEFORE-PRODUCT.md  DIAGNOSTIC_PLAY_GENERATION.md  HANDOFF_TO_DEV_AGENT.md  NEXT_STEPS.md  OWNERSHIP.md  QUICKSTART.md  README.md  STATE.md  check-ncaam-market.js  check-ncaam-payload.js  check-play-status.js  check-raw-data.js  cheddar-fpl-sage.service  cheddar-picker-v1.jsx  cheddar-web.service  cheddar-worker.service  ecosystem.config.js  env.example  eslint.config.mjs  package-lock.json  package.json  railway.json  refresh-data.sh  risk_analysis.ipynb  typescript  vercel.json  verify-markets.js
cheddar-fpl-sage/: .gitignore  README.md  fpl_sage.py  pyproject.toml
cheddar-fpl-sage/.planning/: API_TEST_MATRIX_2026-02-25.md  ARCHITECTURE.md  DESIGN-SYSTEMS.md  FOLLOW_UP_ISSUES.md  GAPS-AND-IMPROVEMENTS.md  PRODUCTION_AUDIT_2026-02-25.md  PROJECT-BRIEF.md  PROJECT.md  ROADMAP.md  STATE.md  TEST_EXECUTION_NEXT_2_DAYS.md  TODOS.md  UX-ISSUES.md  WEB_UI_FLOW.md  competitor-analysis.md  config.json  data_schema.md  fpl-sage-api-requirements.md  market-research.md
cheddar-fpl-sage/backend/: .env.example  API_DOCUMENTATION.md  GSD_DEBUG_REPORT_UNLIMITED_ACCESS.md  GSD_TASK_COMPLETE.md  QUICK_START.md  UNLIMITED_ACCESS_GUIDE.md  UNLIMITED_ACCESS_QUICKREF.md  __init__.py  config.py  exceptions.py  main.py  requirements.txt  team_config.json  test_interactive_api.sh
cheddar-fpl-sage/bmad_gsd/: INSTALL_GUIDE.md  MANIFEST.in  README.md  __init__.py  agents.py  install_to_personal_dashboard.sh  pyproject.toml  tasks.py
cheddar-fpl-sage/config/: fpl_team_ids.json  requirements.txt  (+4 more)
(+3179 files in other folders)
