[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cheddar-fpl-sage"
version = "0.1.0"
description = "Cheddar FPL Sage decision engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["cheddar_fpl_sage", "bmad_gsd"]
package-dir = {"cheddar_fpl_sage" = "src/cheddar_fpl_sage", "bmad_gsd" = "bmad_gsd"}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
python_files = ["test_*.py", "*_test.py", "*_suite.py"]
